--- a/package.json
+++ b/package.json
@@ -5,14 +5,12 @@
   "description": "A short description of your package",
   "keywords": [
   ],
-  "activationCommands": {
-    "atom-workspace": "atom-repl:toggle"
-  },
-  "repository": "https://github.com/atom/atom-repl",
+  "repository": "https://github.com/jasonknight/atom-repl",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
   "dependencies": {
+      "tempy": ">=0.1.0"
   }
 }
