--- a/package.json
+++ b/package.json
@@ -2,8 +2,14 @@
   "name": "atom-repl",
   "main": "./lib/atom-repl",
   "version": "0.0.0",
-  "description": "A short description of your package",
+  "description": "Implementation of Fake REPLs for Lisp, Lua, Python, PHP and Ruby. Code is executed in the background via temporary files.",
   "keywords": [
+      "REPL",
+      "Lisp",
+      "Ruby",
+      "Python",
+      "PHP",
+      "Lua"
   ],
   "repository": "https://github.com/jasonknight/atom-repl",
   "license": "MIT",
